<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.registration_screen.RegistrationFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/register_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/firstname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/group"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/group"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Button
            android:id="@+id/actionButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/blue_rksi"
            android:text="@string/register"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>